# crule

./: README.md  analysis.ipynb  data-scenario-analysis.ipynb  plots.ipynb  pyproject.toml  rmse.csv  run_bearing_extended.sh  run_cmapss_scenarios.sh  run_ncmapss_scenarios.sh  runs.csv  sanity_check.py  score.csv  setup_lambda.sh  train.py  tune_adaption.py  tune_backbone.py  tune_two_stage_backbone.py
.github/workflows/: lint.yaml  test.yaml
config/: config.yaml
config/approach/: adarul.yaml  conditional_dann.yaml  conditional_mmd.yaml  consistency.yaml  dann.yaml  latent_align.yaml  mmd.yaml  no_adaption.yaml  pseudo_labels.yaml  supervised.yaml
config/dataset/: cmapss.yaml  femto.yaml  ncmapss.yaml  xjtu-sy.yaml
config/feature_extractor/: two_stage.yaml
config/task/: five2four.yaml  five2one.yaml  five2seven.yaml  five2six.yaml  five2three.yaml  five2two.yaml  four2five.yaml  four2seven.yaml  four2six.yaml  one2five.yaml  one2seven.yaml  one2six.yaml  seven2five.yaml  seven2four.yaml  seven2one.yaml  seven2six.yaml  seven2three.yaml  seven2two.yaml  six2five.yaml  six2four.yaml  six2one.yaml  six2seven.yaml  six2three.yaml  six2two.yaml  three2five.yaml  three2seven.yaml  three2six.yaml  two2five.yaml  two2seven.yaml  two2six.yaml
crule/: __init__.py  evaluation.py
crule/run/: __init__.py  adarul.py  common.py  dann.py  mmd.py  no_adaption.py  pseudo_labels.py  utils.py
hydra_plugins/ray_hydra_launcher/: ray_launcher.py
results/: runs.csv
tests/: test_evaluation.py  test_run.py  test_run_common.py  test_tune.py  test_utils.py
(+20 files in other folders)
