[tool.poetry]
name = "crule"
version = "0.0.0"
description = "A benchmark suite for Domain Adaptation for Remaining Useful Life Estimation."
authors = ["Krokotsch, Tilman <tilman.krokotsch@tu-berlin.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tilman151/crule"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering "
]
packages = [{include = "crule"}]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.8.0.post1"
rul-adapt = "^0.3.0"
rul-datasets = "^0.10.5"
tqdm = "^4.62.2"
hydra-core = "^1.3.1"
pywavelets = "^1.4.1"
dtaidistance = "^2.3.10"
ray = {extras = ["tune"], version = "^2.5.0"}
protobuf = "^3.20.0"
wandb = "^0.15.4"
scikit-posthocs = "^0.7.0"
networkx = "^3.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
tensorboard = "^2.11.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.8.0"}
flake8 = "^5.0.4"
mypy = "^1.0.0"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pandas-stubs = "^2.0.3"
types-tqdm = "^4.66.0.2"

[tool.pytest.ini_options]
markers = ["integration: does a full train-test run"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
exclude = ".venv"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."rul_datasets/__init__.py"]